# scout_ros

./: README-ZH.md  README.md
scout_base/: CMakeLists.txt
scout_base/include/scout_base/: scout_messenger.hpp
scout_base/launch/: scout_base.launch  scout_mini_base.launch  scout_mini_omni.launch
scout_base/src/: scout_base_node.cpp  scout_messenger.cpp
scout_bringup/: package.xml
scout_bringup/launch/: scout.launch  scout_mini_minimal.launch  scout_mini_robot_base.launch  scout_minimal_uart.launch  scout_miniomni_robot_base.launch  scout_robot_base.launch  scout_simulated_robot.launch  teleop_keyboard.launch
scout_description/: package.xml
scout_description/launch/: display_scout_mini.launch  display_scout_v2.launch  gazebo.launch  scout_mini_stock.launch
scout_description/rviz/: future_you.rviz  model_display.rviz  rviz_navigation.rviz  scout.rviz  scout_mini_model_display.rviz
scout_description/urdf/: scout_mini.urdf.xacro  scout_mini.xacro  scout_mini_wheel.xacro  scout_v2.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
scout_msgs/: CMakeLists.txt
scout_msgs/msg/: ScoutMotorState.msg  ScoutRsStatus.msg  ScoutStatus.msg
